<resources>
    <string name="app_name">Work Allocation &amp; Time Management</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="staff_portal">Staff Portal</string>
    <string name="menu_history">History</string>
    <string name="menu_workflow">Workflow Monitoring</string>
    <string name="menu_alpen" translatable="false">A.L.P.E.N.</string>
    <string name="menu_crowdsourcing" translatable="false">Spatial Crowdsourcing</string>
    <string name="menu_exit">Exit or Logout</string>
    <string name="staff_portal_text">Staff Portal Access: I.\tInitial assumption: As specified in Appendix B, a managerial staff decides to browse the catalogue of available manpower within the organization’s workforce. A function gets this done and the staffs are categorized based on their departments after being registered onto the system. II.\tNormal Routine: Just as described above, however, extra filtering and search features ought to be supported to quickly find specific staffs to designate tasks. III.\tWhat can go wrong: A newly recruited staffs might not show up on the system, or names and other important details might be incorrectly entered. The system should ensure that the metrics being used for searching for employees are valid such as constraints on (for example) length of ID number. IV.\tOther Activities: The manager reserves the right to register new employees to the system seeing as low-level personnel will be prevented from doing this. V.\tSystem state on completion: A selected staff’s metrics are displayed.</string>
    <string name="show_all_staffs">Show All Staffs</string>
    <string name="find_specific_staff">Find Specific Staff</string>
    <string name="image_description">A sample template photo representing staff portal</string>
    <string name="staff_portal_title">Staff Portal</string>
    <string name="app_description">Time management and work allocation are some of the most important aspects of conducting business operations or completing projects. Various investigations by previous researchers have shown that issues that manifest as a result of improper work allocation techniques and time management procedures include (but not limited to) improper actualization of tasks, noncompliance with established regulatory procedures, and lack of total identification of workforce expertise domain. This presentation discusses a proposed system that aims to adapt the characteristics of an existing time management framework in conjunction with the paradigms of work allocation into a mobile computerized system.</string>
    <string name="history_description">An image of a giant bell icon representing brief histories</string>
    <string name="clear_all_history">Clear All History</string>
    <string name="show_all_history">Show All History</string>
    <string name="history_text">Notifications: I.\tInitial assumption: Initially, the system should have notification set for any important event like confirmation of requests, errors, timestamps, deadlines, log ins and log outs, and similar actions. II.\tNormal: Same as above. III.\tWhat can go wrong: Seeing as the application will be made remotely accessible, it’s possible that the Firebase servers may encounter errors, or in the case where a device is temporarily disconnected, real time connectivity and synchronization might be impossible. Hence, the application should maintain records and return delayed notifications once connection is regained. IV.\tOther Activities: None so far. V.\tSystem state on completion: The user should have the desired set of changes pertaining to the notification available once it’s been received.</string>
    <string name="history_title">Notification History</string>
    <string name="workflow_description">A template image showing an idealized process workflow icon</string>
    <string name="track_workflows">Track Workflows</string>
    <string name="track_goals">Task Goals</string>
    <string name="workflow_text">Workflow Monitoring and Goal Analysis I.\tInitial assumption: A user or manager intends to keep track of the tasks being dealt with (including goals) for a set of operations. For the monitoring procedure however, all that should be done hitherto is just as described per the namesake – advanced workflow management techniques will be touched under a different requirement that implements the ALPEN framework. II.\tNormal: A user or manager decides to highlight the list of tasks he/she has to cover, metrics will be displayed about the completion progress, and duration or elapsed time. III.\tWhat can go wrong: No tasks designated or no specific operation available. The program should cope with this by displaying an appropriate message. IV.\tOther activities: Elaborate workflow management will be handled with the ALPEN implementation to be separate requirement. V.\tSystem state on completion: The tasks are displayed as intended with the user provided utilities to return to previous or different operations.</string>
    <string name="workflow_title" translatable="false"><![CDATA[Workflow & Goal Analysis]]></string>
    <string name="alpen_description">An graphic art briefly describing the A.L.P.E.N. time management framework. A is for Activities. L for lenght, P for Plan buffer time, E for establishment of priorities, N for notation.</string>
    <string name="activity_button">Define Activities</string>
    <string name="lenghth_button">Estimate Length of Time</string>
    <string name="planning_button">Plan Buffer Time</string>
    <string name="est_priorities_button">Establish Prioritized Decisions</string>
    <string name="notation_button">Note Success Level</string>
    <string name="alpen_title">A.L.P.E.N. : Assign Tasks</string>
    <string name="home">Home</string>
    <string name="tasks">TASKS</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="title_name" translatable="false"><![CDATA[Work Allocation & Time Management System]]></string>
    <string name="short_description">Manage tasks with the A.L.P.E.N. framework.</string>
    <string name="get_started">GET STARTED</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile_desc">You are signed in as</string>
    <string name="your_profile">Your Profile</string>
    <string name="history">History</string>
    <string name="your_name">Your Name</string>
    <string name="your_name_new">Your name</string>
    <string name="spatial_cs" translatable="false">Spatial C.S.</string>
    <string name="logout_message">You\'ll have to sign-in again on your next session. Are you sure you want to continue ?</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="already_home">You\'re already home</string>
    <string name="logout_success">Logout successful</string>
    <string name="signin_cancelled">Sign-in was cancelled!</string>
    <string name="no_internet">You have no internet connection</string>
    <string name="unknown_error">Unknown error. The Firebase server may be down.</string>
    <string name="main_menu">Main Menu</string>
    <string name="incomplete_signin">Sign-in might be incomplete</string>
    <string name="edit_name">Edit your name</string>
    <string name="edit_email">Edit your email</string>
    <string name="update">Update</string>
    <string name="update_refreshed">Updates Refreshed</string>
    <string name="update_successful">Update Successful</string>
    <string name="update_company">Update your organization or company name</string>
    <string name="update_department">Update your department</string>
    <string name="update_expertise">Specify your expertise</string>
    <string name="update_interests">Specify your areas of interest</string>
    <string name="update_f" translatable="false">Update cancelled or failed</string>
    <string name="old_device_warning">Experimental feature warning: may not work on pre-2015 devices!</string>
    <string name="try_again">Please reload and try again.</string>
    <string name="signout_failed">Sign-out failed!</string>
    <string name="read_failed" translatable="false">Read failed!</string>
    <string name="company_label">Company / Organization</string>
    <string name="your_email">Your email</string>
    <string name="helper_interests">You can use commas and semicolons</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="target_user_name">The user you want to assign a task</string>
    <string name="target_user_email">That user\'s email</string>
    <string name="assign_collab">Assign a collaborator by email</string>
    <string name="task_assignment">Task Assignment</string>
    <string name="manual_assign">Assign Manually</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="not_editable">You can\'t modify this field</string>
    <string name="return_home" translatable="false">Return</string>
    <string name="later">Later</string>
    <string name="keep_track">Keep Track</string>
    <string name="workflows">Workflows</string>
    <string name="now_assigning">You are now assigning a task to</string>
    <string name="assign_now">Assign Now</string>
    <string name="notifications">Notifications</string>
    <string name="choose_date">Choose Dates</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="set_end_date">Set End Date</string>
    <string name="set_start_date">Set Start Date</string>
    <string name="invalid_time_difference">Invalid time difference! Please ensure the end date is greater than 3 minutes and set later than the start date.</string>
    <string name="empty_fields_warning">Please, fill up the required fields.</string>
    <string name="date_entry_warning">For data registration only! Use time fields for duration.</string>
    <string name="expected_start_date">Expected start date</string>
    <string name="expected_end_date">Expected end date</string>
    <string name="task_title">Task Title</string>
    <string name="activity">Activity</string>
    <string name="task_description">Task Description</string>
    <string name="length">Length</string>
    <string name="planning">Planning</string>
    <string name="plan_duration">ALPEN Planning Duration</string>
    <string name="extra_duration">Included Extra Time Duration</string>
    <string name="priority">Priority</string>
    <string name="establish_priorities">Establish Priorities</string>
    <string name="creator_name">Creator Name</string>
    <string name="creator_email">Creator Email</string>
    <string name="status">Status</string>
    <string name="task_id">Task ID</string>
    <string name="no_collaborator"><![CDATA[<No Collaborator>]]></string>
    <string name="no_company"><![CDATA[<No Company>]]></string>
    <string name="no_department"><![CDATA[<No Department>]]></string>
    <string name="date_completed">Date Completed</string>
    <string name="completed_as">Completed As</string>
    <string name="completed_by">Completed By</string>
    <string name="date_started">Date Started</string>
    <string name="started_as">Started As</string>
    <string name="started_by">Started By</string>
    <string name="expected_completion">Expected Completion</string>
</resources>