<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/loginContent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:backgroundTint="#FF5252"
        android:fontFamily="@font/amiko"
        android:gravity="center|center_horizontal|center_vertical"
        android:lines="2"
        android:shadowColor="#FF5252"
        android:text="@string/get_started"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shortDescription" />

    <ImageView
        android:id="@+id/titleIcon"
        android:layout_width="242dp"
        android:layout_height="112dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/appicon" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/amiko_semibold"
        android:paddingTop="@dimen/dimens"
        android:paddingBottom="@dimen/dimens"
        android:text="@string/title_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleIcon" />

    <TextView
        android:id="@+id/shortDescription"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amiko_semibold"
        android:text="@string/short_description"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />


</androidx.constraintlayout.widget.ConstraintLayout>