<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/completionsTitleLinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimens"
        android:layout_marginRight="@dimen/dimens"
        android:layout_marginTop="@dimen/dimens">

        <TextView
            android:id="@+id/textViewForCompletionsTaskTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:height="18dp"
            android:gravity="center_vertical"
            android:hint="@string/task_title"
            android:lines="2"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/completionsExpectedCompletionLinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimens"
        android:layout_marginRight="@dimen/dimens"
        android:layout_below="@+id/completionsTitleLinLayout">
        <TextView
            android:id="@+id/textViewForCompletionsExpectedCompletion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="10sp"
            android:height="15dp"
            android:gravity="center_vertical"
            android:lines="2"
            android:hint="@string/expected_completion"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/completionsDateTimeLinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimens"
        android:layout_marginRight="@dimen/dimens"
        android:layout_below="@+id/completionsExpectedCompletionLinLayout">
        <TextView
            android:id="@+id/textViewForCompletionsDateTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="10sp"
            android:height="15dp"
            android:gravity="center_vertical"
            android:lines="2"
            android:hint="@string/date_completed"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/completionsCompletedAsLinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimens"
        android:layout_marginRight="@dimen/dimens"
        android:layout_below="@+id/completionsDateTimeLinLayout">
        <TextView
            android:id="@+id/textViewForCompletionsCompletedAs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="10sp"
            android:height="15dp"
            android:gravity="center_vertical"
            android:lines="2"
            android:hint="@string/completed_as"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/completionsCompletionFromLinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimens"
        android:layout_marginRight="@dimen/dimens"
        android:layout_below="@+id/completionsCompletedAsLinLayout">
        <TextView
            android:id="@+id/textViewForCompletionsFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="10sp"
            android:height="15dp"
            android:gravity="center_vertical"
            android:lines="2"
            android:hint="@string/completed_by"
            tools:ignore="SmallSp" />
    </LinearLayout>


</RelativeLayout>